plugin-1.2.0-rc4: new features --> import datapack as a project.